@@ -12,8 +12,9 @@ linuxmuster-linbo (2.4.0-0) lmn7; urgency=low
   * minor linbo grub theme improvements.
   * fixed kernel and initrd paths and linbo menu class in remaining grub config templates.
   * fix #153: Extend linbo clients ssh authorized_keys.
+  * fix #152: Linbo should not reboot on update in all cases.
 
- -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 27 Nov 2020 19:23:37 +0100
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 04 Dec 2020 11:11:45 +0100
 
 linuxmuster-linbo (2.3.68-0) lmn7; urgency=low
 
